change grid.html and git.html
content correction

--- a/git.html
+++ b/git.html
@@ -89,6 +89,11 @@
 		zapisano folder roboczy w nfolderze slider_js; mozna nie podawac nazwy folderu docelowego wtedy utworzy sobie
 		katalod o nazwie gita)
 	</li>
+	<li>git remote add nazwa_remota adres - ustawianie zdalnego adresu gdzie będziemy mogli np pushowac repo <br>
+		example:  git remote add origin https://github.com/krzysztofmarkiewicz/cheat_sheet_webdev.git
+	(czyli git ustwaia remote o nazwie origin z adresem https://github...</li>
+	<li>git push -u origin master - wyslanie pod adres podany w remote o nazwie origin naszego repo na branch master (parametr "-u" ustawia set upstream, tak jakby stała połączenie, potem mozmy pushowac bez tego parametru wystarczy samo git push</li>
+<li>git remote -v - sprawdzenie adresu gdzie sie pushuje i skad pulluje</li>
 	<li>wazne<ul>
 			<li>git rm plik - usuwa plik z indeksu (staging area) i z katalogu roboczego</li>
 			<li>git rm --cached plik - usuwa plik z indeksu, plik staje się nieśledzony.</li>
