--- a/grid.html
+++ b/grid.html
@@ -17,7 +17,7 @@
     <p>Jednostka (do ustalania szer. i wys.) w grid to <strong>FRAKCJA (np. 1fr)</strong>. W gridzie najlepiej używać
         frakcji</p>
     <p>Do ustwalania szerokości GUTTERa służy właściwość <strong>grid-gap (row-gap i column-gap</strong>. Skrócony zapis
-        to "gap"(np. "grid-gap: 20px 20px lub gap:20px" co oznacza że odstęp między wierszami to 20px i kolumnami też
+        to "gap"(np. "grid-gap: 20px 20px lub gap:20px" co oznacza, że odstęp między wierszami to 20px i kolumnami też
         20px)</p>
     <br><br><a href="https://mozilladevelopers.github.io/playground/css-grid/03-firefox-devtools/">Info o gridzie w
         devtoolsach firefoxa</a>
