--- a/git.html
+++ b/git.html
@@ -144,7 +144,7 @@ Head wskazuje też na bieżący (ostatni) commit (wierzchołek gałęzi). Kolejn
 	Nasze sklonowane repozytorium jest aktualizowane.</p>
 
 </p>
-
+<p>stylowanie pliku readme.md <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet#emphasis">link</a></p>
 <p> Mamy trzy głowne obszary</p>
 <ul>
 	<li>katalog roboczy (folder główny z projektem)</li>
