chenge vscode.html

--- a/vscode.html
+++ b/vscode.html
@@ -1,7 +1,10 @@
-<div class="main-box-in" style="background-color: pink"><h3>Dodawanie elementów</h3>
-<p>div>p*3{koń} - dodaje Diva a w nim 3 paragrafy a w kazdym z nich tekst koń (jesli w klamrze po teksce kon dodasz$ to wtedy beda one ponumerowane: kon1 kon2 kon3)
-</p>
-<hr>
-<p>znajdz i zamien - option+command+h</p></div>
+<div class="main-box-in">
+    <h3>Dodawanie elementów</h3>
+    <p>div>p*3{koń} - dodaje Diva a w nim 3 paragrafy a w kazdym z nich tekst koń (jesli w klamrze po teksce kon dodasz$
+        to wtedy beda one ponumerowane: kon1 kon2 kon3)
+    </p>
+    <hr>
+    <p>znajdz i zamien - option+command+h</p>
+</div>
 
 <div class="main-box-in"></div>
