--- a/bootstrap.html
+++ b/bootstrap.html
@@ -18,10 +18,9 @@
                 href="https://getbootstrap.com/docs/4.4/content/typography/">getbootstrap.com</a>
             <ul>
                 <li>Można tworzyć nagłówki, bez podnoszenia wartości semantycznej. <br>tworzymy wtedy np. paragraf z
-                    klasą
-                    h1
+                    klasą h1
                 </li>
-                <li>Mega duże nagłówki <br>
+                <li>Mega duże nagłówki<br>
                     tworzymy paragraf z klasą display(od 1 do 4)</li>
                 <li>dodanie do paragrafu czy spanu klasy "text-muted" wyszarza teks czyli stylizuje na wyciszony jakby
                 </li>
