add content to files from the commit
and delete lightbox.htm

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="#main-grid">grid</a></li>
             <li><a href="#main-flexbox">flexbox</a></li>
             <li><a href="#main-js">js</a></li>
+            <li><a href="#main-git">git</a></li>
         </ol>
     </nav>
     <aside>
@@ -34,17 +35,31 @@
     </aside>
     <main>
         <div class="menu-sticky">
-            <ol>
-                <li><a href="#main-html">html</a></li>
-                <li><a href="#css-html">css</a></li>
-                <li><a href="#main-grid">grid</a></li>
-                <li><a href="#main-flexbox">flexbox</a></li>
-                <li><a href="#main-js">js</a></li>
-                <li><a href="#main-sass">sass</a></li>
-                <li><a href="#main-notatki">notatki</a></li>
-                <li><a href="#main-vscode">vscode</a></li>
-                <li><a href="#main-bootstrap">bootstrap</a></li>
-            </ol>
+            <div>
+                <ol>
+                    <li><a href="#main-bootstrap">bootstrap</a></li>
+                    <li><a href="#css-html">css</a></li>
+                    <li><a href="#main-flexbox">flexbox</a></li>
+                    <li><a href="#main-git">git</a></li>
+                    <li><a href="#main-grid">grid</a></li>
+                    <li><a href="#main-html">html</a></li>
+                    <li><a href="#main-js">js</a></li>
+                    <li><a href="#main-notatki">notatki</a></li>
+                    <li><a href="#main-sass">sass</a></li>
+                    <li><a href="#main-vscode">vscode</a></li>
+                </ol>
+            </div>
+            <div class="container-fluid fluidBlue glossaryTop">
+                <div class="container obamacare101">
+                    <div>
+                        <input type="text" placeholder="Enter term or phrase" id="search_text">
+                        <input type="submit" value="Search" id="search_submit">
+                    </div>
+                </div>
+            </div>
+
+
+
         </div>
         <div id="main-html" class="main-box main-box-html" include-html="html.html"></div>
         <div id="css-html" class="main-box main-box-css" include-html="css.html"></div>
@@ -55,9 +70,11 @@
         <div id="main-notatki" class="main-box main-box-notatki" include-html="notatki.html"></div>
         <div id="main-vscode" class="main-box main-box-vscode" include-html="vscode.html"></div>
         <div id="main-bootstrap" class="main-box main-box-bootstrap" include-html="bootstrap.html"></div>
+        <div id="main-git" class="main-box main-box-git" include-html="git.html"></div>
     </main>
     <footer></footer>
     <a class="to-top-btn" href="#top"><i class="fas fa-chevron-circle-up"></i></a>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 
     <script src="js/script.js"></script>
     <script>
