--- a/notatki.html
+++ b/notatki.html
@@ -66,6 +66,11 @@
     <p>tła, gradienty
     </p>
     <hr>
+    <h3>Tinypng</h3>
+    <a href="https://tinypng.com/" target="_blank">https://tinypng.com/</a>
+    <p>zmniejszanie obrazków png i jpg/ najlepsza
+    </p>
+    <hr>
 </div>
 
 
