delete files ang change files
delete files javascript. html & javascripts2.html

change several files html and css/sass

--- a/linki.html
+++ b/linki.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<h1>PRZYDATNA LINKI</h1>
     <a href="https://www.youtube.com/watch?v=evVmUHd6WXM">CSS3 - Wyśrodkowanie elementu na stronie internetowej w piponie i poziomie - CSS3
     </a>
-</body>
-</html>
