--- a/notatki.html
+++ b/notatki.html
@@ -1,6 +1,10 @@
 <div class="main-box-in">
     <h1>Notatki</h1><br>
     <hr>
+    <h3>designer.gravit.io</h3>
+    <a href="https://designer.gravit.io" target="_blank">https://designer.gravit.io</a>
+    <p>Darmowa webowa aplikacja do tworzenia grafik wektorowych</p>
+    <hr>
     <h3>PIXABAY</h3>
     <a href="http://pixabay.com" target="_blank">pixabay.com</a>
     <p>Portal na którym są zdjęcia i filmy za free, nawet do użutku komercyjnego</p>
