--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <header name="top">ściąga</header>
     <nav>
         <ol>
+            <li><a href="#main-links">linki</a></li>
             <li><a href="#main-html">html</a></li>
             <li><a href="#css-html">css</a></li>
             <li><a href="#main-grid">grid</a></li>
             <li><a href="#main-flexbox">flexbox</a></li>
-            <li><a href="#main-js">js</a></li>
             <li><a href="#main-git">git</a></li>
         </ol>
     </nav>
@@ -43,7 +43,7 @@
                     <li><a href="#main-git">git</a></li>
                     <li><a href="#main-grid">grid</a></li>
                     <li><a href="#main-html">html</a></li>
-                    <li><a href="#main-js">js</a></li>
+                    <li><a href="#main-links">linki</a></li>
                     <li><a href="#main-notatki">notatki</a></li>
                     <li><a href="#main-sass">sass</a></li>
                     <li><a href="#main-vscode">vscode</a></li>
@@ -61,11 +61,11 @@
 
 
         </div>
+        <div id="main-links" class="main-box main-box-links" include-html="linki.html"></div>
         <div id="main-html" class="main-box main-box-html" include-html="html.html"></div>
         <div id="css-html" class="main-box main-box-css" include-html="css.html"></div>
         <div id="main-flexbox" class="main-box main-box-flexbox" include-html="flexbox.html"></div>
         <div id="main-grid" class="main-box main-box-grid" include-html="grid.html"></div>
-        <div id="main-js" class="main-box main-box-js" include-html="javascript.html"></div>
         <div id="main-sass" class="main-box main-box-sass" include-html="sass.html"></div>
         <div id="main-notatki" class="main-box main-box-notatki" include-html="notatki.html"></div>
         <div id="main-vscode" class="main-box main-box-vscode" include-html="vscode.html"></div>
