change linki.html  and notatki.html

--- a/linki.html
+++ b/linki.html
@@ -1,3 +1,127 @@
-<h1>PRZYDATNA LINKI</h1>
+<h1>PRZYDATNE LINKI</h1>
+<hr>
     <a href="https://www.youtube.com/watch?v=evVmUHd6WXM">CSS3 - Wyśrodkowanie elementu na stronie internetowej w piponie i poziomie - CSS3
     </a>
+    <hr>
+    <h3>muz.li</h3>
+    <a href="https://muz.li/#" target="_blank">https://muz.li/#</a>
+    <p>strona do szukania inspiracji</p>
+    <hr>
+    <h3>designer.gravit.io</h3>
+    <a href="https://designer.gravit.io" target="_blank">https://designer.gravit.io</a>
+    <p>Darmowa webowa aplikacja do tworzenia grafik wektorowych</p>
+    <hr>
+    <h3>PIXABAY</h3>
+    <a href="http://pixabay.com" target="_blank">pixabay.com</a>
+    <p>Portal na którym są zdjęcia i filmy za free, nawet do użutku komercyjnego</p>
+    <hr>
+    <h3>SOUNDBIBLE</h3>
+    <a href="http://soundbible.com" target="_blank">soundbible.com</a>
+    <p>Portal na którym są darmowe dźwięki i melodie</p>
+    <hr>
+    <h3>FONT AWSOME</h3>
+    <a href="http://fontawesome.com" target="_blank">fontawesome.com</a>
+    <p>Portal na którym są ikony w formie czcionki. Trzeba założyć konto (jeden kit darmowy)</p>
+    <hr>
+    <h3>Google Fonts</h3>
+    <a href="http://fonts.google.com" target="_blank">fonts.google.com</a>
+    <p>Mnóstwo czcionek</p>
+    <hr>
+    <h3>QHMIT.COM</h3>
+    <a href="https://www.qhmit.com" target="_blank">qhmit.com</a>
+    <p>Bardzo pomocna strona. Spis kolorów, kolor pickery i gredinty. Wiele pomocnych rzeczy.</p>
+    <hr>
+    <h3>unsplash.it</h3>
+    <a href="https://www.unsplash.it" target="_blank">unsplash.com</a>
+    <p>Losowy obrazek do strony. Do testowania jak będzie wyglądał obrazek w odpowiedniej wielkosci na stronie. <br>
+        Podajemy sciezke do img w taki sposob https://unsplash.it/szerokosc/wysokosc <br> np.
+        https://unsplash.it/250/400
+    </p>
+    <img src="https://unsplash.it/400/100" alt="">
+    <hr>
+    <h3>eggradients.com</h3>
+    <a href="https://eggradients.com" target="_blank">eggradients.com</a>
+    <p>Strona z gotowymi gradientami <br></p>
+    <hr>
+    <h3>codpen.io.com</h3>
+    <a href="https://codepen.io" target="_blank">codepen.io</a>
+    <p>Na stron ie można umieszczać swoje ciekawe projekty i przeglądać inne<br>
+    </p>
+
+    <hr>
+    <h3>PageSpeed Insights</h3>
+    <a href="https://developers.google.com/speed/pagespeed/insights/?hl=pl"
+        target="_blank">https://developers.google.com/speed/pagespeed/insights/?hl=pl</a>
+    <p>Narzędzie dla developerów. Można sprawdzić jak strona jest dobrze zoptymalizowana. Pod komórki czy komputery.
+        Ważne
+        dla RWD<br>
+    </p>
+
+    <hr>
+    <h3>aWWWards</h3>
+    <a href="https://www.awwwards.com/" target="_blank">https://www.awwwards.com/</a>
+    <p>Najładniejsze strony<br>Można szukać tam inspiracji
+    </p>
+    <hr>
+    <h3>canva.com/</h3>
+    <a href="https://www.canva.com/" target="_blank">https://www.canva.com/</a>
+    <p>
+    </p>
+    <hr>
+    <h3>Fresh backgrounds/</h3>
+    <a href="https://webgradients.com/" target="_blank">https://webgradients.com/</a>
+    <p>tła, gradienty
+    </p>
+    <hr>
+    <h3>Tinypng</h3>
+    <a href="https://tinypng.com/" target="_blank">https://tinypng.com/</a>
+    <p>zmniejszanie obrazków png i jpg/ najlepsza
+    </p>
+    <hr>
+</div>
+
+
+<div class="main-box-in">
+    <hr>
+    <h3>Minify</h3>
+    <a href="https://www.minifier.org">https://www.minifier.org</a>
+    <p>Minifikator kodu js i css</p>
+    <hr>
+    <h3>TemplateMonster</h3>
+    <a href="https://www.templatemonster.com/" target="_blank">https://www.templatemonster.com/</a>
+    <p>Najładniejsze strony<br>Można szukać tam inspiracji
+    </p>
+    <hr>
+    <h3>thestocks.im/</h3>
+    <a href="http://thestocks.im//" target="_blank">http://thestocks.im/</a>
+    <p>Srona ze zdjeciami<br>darmowe, albo płatne
+        , albo trzeba na stronie zaakredytowac autora ze to jego zdjecie
+    </p>
+    <a href="https://www.minifier.org/" target="_blank">https://www.minifier.org/</a>
+    <p>strona służy do minifikacji kodu
+    </p>
+    <hr>
+    <h3>Walidator W3C</h3>
+    <a href="https://validator.w3.org/" target="_blank">https://validator.w3.org/</a>
+    <p>Walkidator kodu od W3C, sprawdza błędy
+    </p>
+    <hr>
+    <h3>Can I Use</h3>
+    <a href="https://caniuse.com/" target="_blank">https://caniuse.com/</a>
+    <p>Na stronie można sprawdzić czy można użyć danej właściwości i czy działa na różnuych przeglądarkach
+    </p>
+    <hr>
+    <h3>Wykaz rodzajów kursorów</h3>
+    <a href="https://css-tricks.com/using-css-cursors/">https://css-tricks.com/using-css-cursors/</a>
+    <p>
+    </p>
+    <hr>
+    <h3>Animate.css</h3>
+    <a href="https://Animate.css">https://Animate.css</a>
+    <p>Gotowe animacje
+    </p>
+    <hr>
+    <h3>Animista.net</h3>
+    <a href="https://animista.net/">https://animista.net</a>
+    <p>Gotowe animacje
+    </p>
