--- a/notatki.html
+++ b/notatki.html
@@ -1,120 +1,14 @@
 <div class="main-box-in">
     <h1>Notatki</h1><br>
+    
     <hr>
-    <h3>designer.gravit.io</h3>
-    <a href="https://designer.gravit.io" target="_blank">https://designer.gravit.io</a>
-    <p>Darmowa webowa aplikacja do tworzenia grafik wektorowych</p>
-    <hr>
-    <h3>PIXABAY</h3>
-    <a href="http://pixabay.com" target="_blank">pixabay.com</a>
-    <p>Portal na którym są zdjęcia i filmy za free, nawet do użutku komercyjnego</p>
-    <hr>
-    <h3>SOUNDBIBLE</h3>
-    <a href="http://soundbible.com" target="_blank">soundbible.com</a>
-    <p>Portal na którym są darmowe dźwięki i melodie</p>
-    <hr>
-    <h3>FONT AWSOME</h3>
-    <a href="http://fontawesome.com" target="_blank">fontawesome.com</a>
-    <p>Portal na którym są ikony w formie czcionki. Trzeba założyć konto (jeden kit darmowy)</p>
-    <hr>
-    <h3>Google Fonts</h3>
-    <a href="http://fonts.google.com" target="_blank">fonts.google.com</a>
-    <p>Mnóstwo czcionek</p>
-    <hr>
-    <h3>QHMIT.COM</h3>
-    <a href="https://www.qhmit.com" target="_blank">qhmit.com</a>
-    <p>Bardzo pomocna strona. Spis kolorów, kolor pickery i gredinty. Wiele pomocnych rzeczy.</p>
-    <hr>
-    <h3>unsplash.it</h3>
-    <a href="https://www.unsplash.it" target="_blank">unsplash.com</a>
-    <p>Losowy obrazek do strony. Do testowania jak będzie wyglądał obrazek w odpowiedniej wielkosci na stronie. <br>
-        Podajemy sciezke do img w taki sposob https://unsplash.it/szerokosc/wysokosc <br> np.
-        https://unsplash.it/250/400
+    <h3>Oznaczanie autora np zdjęcia (np wymóg licencji)</h3>
+    <p>komentarz w kodzie / mały druczek w footerze / osobna podstrona z materiałami, z których się korzystało (ale to najczęściej jak wielu autorów chce adnotacje) / mały druczek pod zdjęciem typu "zdjęcie autorstwa XYZ"
+        http://emusite.pl/redakcja/ tu też dobry przykład
+        
+        redakcja -> byli redaktorzy -> zasłużeni 
     </p>
-    <img src="https://unsplash.it/400/100" alt="">
-    <hr>
-    <h3>eggradients.com</h3>
-    <a href="https://eggradients.com" target="_blank">eggradients.com</a>
-    <p>Strona z gotowymi gradientami <br></p>
-    <hr>
-    <h3>codpen.io.com</h3>
-    <a href="https://codepen.io" target="_blank">codepen.io</a>
-    <p>Na stron ie można umieszczać swoje ciekawe projekty i przeglądać inne<br>
-    </p>
-
-    <hr>
-    <h3>PageSpeed Insights</h3>
-    <a href="https://developers.google.com/speed/pagespeed/insights/?hl=pl"
-        target="_blank">https://developers.google.com/speed/pagespeed/insights/?hl=pl</a>
-    <p>Narzędzie dla developerów. Można sprawdzić jak strona jest dobrze zoptymalizowana. Pod komórki czy komputery.
-        Ważne
-        dla RWD<br>
-    </p>
-
-    <hr>
-    <h3>aWWWards</h3>
-    <a href="https://www.awwwards.com/" target="_blank">https://www.awwwards.com/</a>
-    <p>Najładniejsze strony<br>Można szukać tam inspiracji
-    </p>
-
-    <hr>
-
-    <h3>canva.com/</h3>
-    <a href="https://www.canva.com/" target="_blank">https://www.canva.com/</a>
-    <p>
-    </p>
-
-    <hr>
-    <h3>Fresh backgrounds/</h3>
-    <a href="https://webgradients.com/" target="_blank">https://webgradients.com/</a>
-    <p>tła, gradienty
-    </p>
-    <hr>
-    <h3>Tinypng</h3>
-    <a href="https://tinypng.com/" target="_blank">https://tinypng.com/</a>
-    <p>zmniejszanie obrazków png i jpg/ najlepsza
-    </p>
-    <hr>
-</div>
-
-
-<div class="main-box-in">
-    <h3>Minify</h3>
-    <h3>TemplateMonster</h3>
-    <a href="https://www.templatemonster.com/" target="_blank">https://www.templatemonster.com/</a>
-    <p>Najładniejsze strony<br>Można szukać tam inspiracji
-    </p>
-    <h3>thestocks.im/</h3>
-    <a href="http://thestocks.im//" target="_blank">http://thestocks.im/</a>
-    <p>Srona ze zdjeciami<br>darmowe, albo płatne
-        , albo trzeba na stronie zaakredytowac autora ze to jego zdjecie
-    </p>
-    <a href="https://www.minifier.org/" target="_blank">https://www.minifier.org/</a>
-    <p>strona służy do minifikacji kodu
-    </p>
-    <h3>Walidator W3C</h3>
-    <a href="https://validator.w3.org/" target="_blank">https://validator.w3.org/</a>
-    <p>Walkidator kodu od W3C, sprawdza błędy
-    </p>
-    <hr>
-    <h3>Can I Use</h3>
-    <a href="https://caniuse.com/" target="_blank">https://caniuse.com/</a>
-    <p>Na stronie można sprawdzić czy można użyć danej właściwości i czy działa na różnuych przeglądarkach
-    </p>
-    <hr>
-    <h3>Wykaz rodzajów kursorów</h3>
-    <a href="https://css-tricks.com/using-css-cursors/">https://css-tricks.com/using-css-cursors/</a>
-    <p>
-    </p>
-    <h3>Animate.css</h3>
-    <a href="https://Animate.css">https://Animate.css</a>
-    <p>Gotowe animacje
-    </p>
-    <h3>Animista.net</h3>
-    <a href="https://animista.net/">https://animista.net</a>
-    <p>Gotowe animacje
-    </p>
-    <hr>
+    <hr
     <h3>Wyśrodkowanie tekstu w pionie</h3>
     <p>Ustalamy line-height na wysokość paragrafu lub diva itp. Działa np przy menu, bo musi być jdna linia tekstu
     </p>
